--- a/index.html
+++ b/index.html
@@ -1256,7 +1256,7 @@
                 <div class="testimonial-card">
                     <div class="testimonial-avatar">M</div>
                     <div class="testimonial-text">Franchement, j'avais peur de me faire arnaquer avec de la location. Genre recevoir un truc pourri qui marche à moitié... Mais là, nickel. Le micro-ondes est propre, il chauffe bien, et surtout j'ai pas eu à claquer 80€ pour un truc que j'allais abandonner dans 6 mois.<br><br>Mes parents voulaient que j'achète neuf sur Amazon, mais j'avais pas envie de jeter de l'argent par les fenêtres. Avec EASYLOC, je paie 9€/mois et je dors tranquille. Et en vrai, leur SAV répond direct sur WhatsApp, pas comme ces grosses boîtes où tu attends 3 jours une réponse automatique.</div>
-                    <div class="testimonial-name">Mohamed Afdaliat</div>
+                    <div class="testimonial-name">Mohamed Afdailat</div>
                     <div class="testimonial-role">Étudiant à Marseille</div>
                 </div>
                 <!-- Testimonial 2 -->
