--- a/index.html
+++ b/index.html
@@ -1417,7 +1417,7 @@
                             <div style="font-size:12px;color:var(--gray-500);">Finance & Stratégie</div>
                         </div>
                     </div>
-                    <p style="font-size:13px;color:var(--gray-500);margin-top:24px;">Étudiants à Centrale Méditerranée · Promotion 2028 · Projet Entrep'</p>
+                    <p style="font-size:13px;color:var(--gray-500);margin-top:24px;">Étudiants à Centrale Méditerranée · Projet Entrep'</p>
                 </div>
             </div>
         </section>
