--- a/index.html
+++ b/index.html
@@ -1100,7 +1100,8 @@
             <p class="subtitle">Micro-ondes, machine à laver, air fryer… Tout ce dont tu as besoin, livré et installé chez toi à partir de <strong>9€/mois</strong>.</p>
             <div class="hero-buttons">
                 <button class="btn-primary" onclick="showPage('catalog')">Voir le catalogue →</button>
-                <button class="btn-secondary" onclick="showPage('pricing')">Nos tarifs</button>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScu3vjwZkBaHupIV9xEY9RW_GH8JMhNMQ14KjZxbIKOCVldyg/viewform?usp=sharing&ouid=108336864298599589187" target="_blank" class="btn-secondary" style="display:inline-block;text-decoration:none;">Premier mois à 1€</a>
+            </div>
             </div>
             <div class="hero-stats">
                 <div class="stat-card">
